--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       const tbody = document.querySelector("#tabella tbody");
       dati.forEach(riga => {
         const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${riga.nome}</td><td><a href="${riga.link}" target="_blank">${riga.link}</a></td>`;
+        tr.innerHTML = `<td>${riga.OPERATORE}</td><td><a href="${riga.SOURCE}" target="_blank">${riga.SOURCE}</a></td>`;
         tbody.appendChild(tr);
       });
     }
