aggiunti campi su tabella

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Lista Link da MongoDB (FastAPI)</h1>
   <table border="1" id="tabella">
     <thead>
-      <tr><th>Nome</th><th>Link</th></tr>
+      <tr><th>Nome</th><th>Regione</th><th>Comune</th><th>Note</th><th>Link</th></tr>
     </thead>
     <tbody></tbody>
   </table>
