--- a/index.html
+++ b/index.html
@@ -3,28 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <title>Lista Link</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet">
+    <style>
+  /* link normali */
+  .custom-nav .nav-link {
+    color: #004080; /* blu scuro */
+    font-weight: 400;
+    border-bottom: 2px solid transparent;
+    transition: all 0.2s ease-in-out;
+  }
+
+  /* hover */
+  .custom-nav .nav-link:hover {
+    border-bottom: 2px solid #004080;
+    font-weight: 500;
+  }
+
+  /* pagina attiva */
+  .custom-nav .nav-link.active {
+    border-bottom: 2px solid #004080;
+    font-weight: 700;
+  }
+</style>
 </head>
 <body>
-  <h1>Lista Link da MongoDB (FastAPI)</h1>
-  <table border="1" id="tabella">
-    <thead>
-      <tr><th>Nome</th><th>Regione</th><th>Comune</th><th>Note</th><th>Link</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <!-- Header principale (scuro) -->
+  <nav class="navbar navbar-expand-lg" style="background-color:#0066cc;">
+    <div class="container">
+      <span class="navbar-brand text-white">GTFS Dashboard</span>
+    </div>
+  </nav>
+
+  <!-- Secondo header (chiaro, con link) -->
+  <nav class="navbar navbar-expand-lg" style="background-color:#e6f0ff;">
+    <div class="container">
+      <ul class="nav nav-underline nav-fill w-100 custom-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="about.html">Cos’è un GTFS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="submit.html">Segnala un GTFS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacts.html">Contatti</a>
+        </li> -->
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Contenuto principale -->
+  <div class="container mt-4">
+    <h1 class="mb-4">Elenco GTFS Italia</h1>
+    <table class="table table-striped" id="tabella">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Regione</th>
+          <th>Comune</th>
+          <th>Note</th>
+          <th>GTFS</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
   <script>
     async function caricaDati() {
       const res = await fetch("https://gtfs-links-be.onrender.com/links"); 
       const dati = await res.json();
+      // Ordinamento alfabetico per OPERATORE
+      dati.sort((a, b) => a.OPERATORE.localeCompare(b.OPERATORE, 'it'));
       const tbody = document.querySelector("#tabella tbody");
       dati.forEach(riga => {
         const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${riga.OPERATORE}</td><td>${riga.REGIONE}</td><td>${riga.COMUNE}</td><td>${riga.NOTE}</td><td><a href="${riga.SOURCE}" target="_blank">${riga.SOURCE}</a></td>`;
+        tr.innerHTML = `
+          <td>${riga.OPERATORE}</td>
+          <td>${riga.REGIONE}</td>
+          <td>${riga.COMUNE}</td>
+          <td>${riga.NOTE}</td>
+          <td><a href="${riga.SOURCE}" target="_blank"  class="btn btn-sm btn-primary">Download</a></td>
+        `;
         tbody.appendChild(tr);
       });
     }
     caricaDati();
+    const links = document.querySelectorAll(".custom-nav .nav-link");
+      links.forEach(link => {
+        if(link.href === window.location.href) {
+          link.classList.add("active");
+        } else {
+          link.classList.remove("active");
+        }
+    });
   </script>
 </body>
 </html>
