cambio campi required

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <div class="card-body">
       <h3 class="card-title">Chi sono</h3>
       <p class="card-text">
-        Ciao! Sono Valerio e lavoro come Data Scientist in RFI. Visto che spesso mi ritrovo a ricercare GTFS e i loro aggiornamenti sui siti dei vari enti pubblici, ho deciso di creare questo repository per raccogliere tutti i link in un unico posto.
+        Ciao! Sono Valerio e lavoro come Data Scientist e lavoro con dati geospaziali. Visto che spesso mi ritrovo a ricercare GTFS e i loro aggiornamenti sui siti dei vari enti pubblici, ho deciso di creare questo repository per raccogliere tutti i link in un unico posto.
       </p>
       <p class="card-text">
         Ho provato a cercare se fosse disponibile un qualcosa di questo tipo a livello istituzionale, ma non ho trovato nulla :/
