--- a/submit.html
+++ b/submit.html
@@ -74,11 +74,11 @@
       </div>
       <div class="mb-3">
         <label for="note" class="form-label">Note</label>
-        <textarea class="form-control" id="note" name="note" rows="3"></textarea>
+        <textarea class="form-control" id="note" name="note" rows="3" required></textarea>
       </div>
       <div class="mb-3">
-        <label for="sorgente" class="form-label">Link GTFS*</label>
-        <input type="url" class="form-control" id="sorgente" name="sorgente" required>
+        <label for="sorgente" class="form-label">Link GTFS</label>
+        <input type="url" class="form-control" id="sorgente" name="sorgente">
       </div>
       <button type="submit" class="btn btn-primary">Invia</button>
     </form>
