--- a/submit.html
+++ b/submit.html
@@ -73,7 +73,7 @@
         <input type="text" class="form-control" id="comune" name="comune">
       </div>
       <div class="mb-3">
-        <label for="note" class="form-label">Note</label>
+        <label for="note" class="form-label">Note*</label>
         <textarea class="form-control" id="note" name="note" rows="3" required></textarea>
       </div>
       <div class="mb-3">
