aggiunta dashboard.html e js

--- a/about.html
+++ b/about.html
@@ -44,9 +44,9 @@
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="cosagtfs.html">Cos’è un GTFS</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="dashboard.html">Una mappa dei GTFS</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="submit.html">Segnala un GTFS</a>
         </li>
