--- a/dashboard.html
+++ b/dashboard.html
@@ -69,7 +69,7 @@
       </ul>
     </div>
   </nav>
-  
+
   <div class="container-fluid vh-100">
     <div class="row h-100">
       <div class="col-md-8 p-0">
@@ -77,7 +77,7 @@
       </div>
       <div class="col-md-4 p-3" id="statsPanel">
         <h5 id="title">Italia</h5>
-        <canvas id="mezziChart"></canvas>
+        <canvas id="mezziBarChart"></canvas>
       </div>
     </div>
   </div>
